--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -7,7 +7,7 @@
     &-wrapper
         display: grid
         grid-template-columns: repeat(4, 1fr)
-        grid-gap-column: 30px
+        grid-column-gap: 30px
         grid-template-rows: min-content max-content 94px max-content 94px
         align-items: start
     // логотип
@@ -38,7 +38,7 @@
             display: flex
             align-content: start
             grid-row: 2/3
-            grid-column: span 
+            grid-column: span 2
     
     &__contact
         // блок contact details
